--- a/Front---End/src/app/maps/maps.component.html
+++ b/Front---End/src/app/maps/maps.component.html
@@ -1,1 +1,11 @@
-<div id="map"></div>
+
+
+<div class="main-content">
+    <div class="container-fluid">
+            <div class="col-md-4">
+                <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="stopWorkout()">Stop Workout</button>
+            </div>
+<div id="map" class="row"></div>
+
+</div>
+</div>
