CRUD on stolen vehicles

--- a/Front---End/src/app/dashboard/dashboard.component.html
+++ b/Front---End/src/app/dashboard/dashboard.component.html
@@ -82,13 +82,13 @@
                       <div class="ct-chart" id="dailySalesChart"></div>
                   </div>
                   <div class="card-body">
-                      <h4 class="card-title">Weekly XP</h4>
-                      <p class="card-category">
-                          <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
+                      <h4 class="card-title">Daily XP</h4>
+                      <!-- <p class="card-category">
+                          <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p> -->
                   </div>
                   <div class="card-footer">
                       <div class="stats">
-                          <i class="material-icons">access_time</i> updated 4 minutes ago
+                          <i class="material-icons">access_time</i> Xp for the last 7 days
                       </div>
                   </div>
               </div>
@@ -100,11 +100,11 @@
                   </div>
                   <div class="card-body">
                       <h4 class="card-title">Monthly XP</h4>
-                      <p class="card-category">Last Campaign Performance</p>
+                      <!-- <p class="card-category">Last Campaign Performance</p> -->
                   </div>
                   <div class="card-footer">
                       <div class="stats">
-                          <i class="material-icons">access_time</i> campaign sent 2 days ago
+                          <i class="material-icons">access_time</i> Xp for the last 12 months
                       </div>
                   </div>
               </div>
