--- a/Front---End/src/app/stolen-vehicles/stolen-vehicles.component.html
+++ b/Front---End/src/app/stolen-vehicles/stolen-vehicles.component.html
@@ -55,9 +55,139 @@
                                     <td>
                                         {{vehicle.profileContact}}
                                     </td>
+                                    <td>
+                                        <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="deleteVehicle(vehicle.id)">Delete</button>       
+
+                                        <button mat-raised-button type="submit" class="btn btn-warning pull-right" (click)="updateObject(vehicle)">Update</button>       
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="addStolenVehicle()" *ngIf="!register">Add Vehicle</button>
+        <div class="row" *ngIf="register">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title">Add Stolen Vehicle</h4>
+                        <p class="card-category">Complete your profile</p>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="username">Country</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="username" matInput placeholder="Username" [(ngModel)]="stolenVehicle.serialNumber">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-5">
+                                    <label for="phoneNumber">City</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="phoneNumber" matInput placeholder="Phone number" [(ngModel)]="stolenVehicle.profileContact">
+                                    </mat-form-field>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label for="phoneNumber">Date</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="email" matInput placeholder="Email address" type="email" [(ngModel)]="stolenVehicle.date">
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="phoneNumber">SerialNumber</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="city" matInput placeholder="City" type="text" [(ngModel)]="stolenVehicle.city">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-4">
+                                    <label for="phoneNumber">Photo</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="country" matInput placeholder="Country" type="text" [(ngModel)]="stolenVehicle.country">
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <label for="phoneNumber">Contact</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <textarea name="description" matInput placeholder="Lamborghini Boy, Dog Lover, Travel addict." [(ngModel)]="stolenVehicle.description"></textarea>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="cancelAddingVehicle()">Cancel</button>
+                            <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="registerVehicle()">Register Vehicle</button>       
+                            <div class="clearfix"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" *ngIf="update">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title">Add Stolen Vehicle</h4>
+                        <p class="card-category">Complete your profile</p>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="username">Country</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="username" matInput placeholder="Username" [(ngModel)]="updateStolenVehicle.serialNumber">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-5">
+                                    <label for="phoneNumber">City</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="phoneNumber" matInput placeholder="Phone number" [(ngModel)]="updateStolenVehicle.profileContact">
+                                    </mat-form-field>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label for="phoneNumber">Date</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="email" matInput placeholder="Email address" type="email" [(ngModel)]="updateStolenVehicle.date">
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="phoneNumber">SerialNumber</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="city" matInput placeholder="City" type="text" [(ngModel)]="updateStolenVehicle.city">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-4">
+                                    <label for="phoneNumber">Photo</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <input name="country" matInput placeholder="Country" type="text" [(ngModel)]="updateStolenVehicle.country">
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <label for="phoneNumber">Contact</label><br>
+                                    <mat-form-field class="example-full-width">
+                                        <textarea name="description" matInput placeholder="Lamborghini Boy, Dog Lover, Travel addict." [(ngModel)]="updateStolenVehicle.description"></textarea>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="cancelAddingVehicle()">Cancel</button>
+                            <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="updateVehicle(updateStolenVehicle.id)">Update Vehicle</button>       
+                            <div class="clearfix"></div>
+                        </form>
                     </div>
                 </div>
             </div>
