--- a/Front---End/src/app/user-profile/user-profile.component.html
+++ b/Front---End/src/app/user-profile/user-profile.component.html
@@ -59,7 +59,7 @@
                 <div class="card card-profile">
                     <div class="card-avatar">
                         <a href="javascript:void(0)">
-                            <img class="img" src="./assets/img/faces/marc.jpg" />
+                            <img class="img" src="./assets/img/profilePicture.png" />
                         </a>
                     </div>
                     <div class="card-body">
