--- a/Front---End/src/app/user-profile/user-profile.component.html
+++ b/Front---End/src/app/user-profile/user-profile.component.html
@@ -28,6 +28,11 @@
                                         <input name="email" matInput placeholder="Email address" type="email" [(ngModel)]="user.email">
                                     </mat-form-field>
                                 </div>
+                                <div class="col-md-3">
+                                    <mat-form-field class="example-full-width">
+                                        <input name="guildId" matInput placeholder="GuildId" type="email" [(ngModel)]="user.guildId">
+                                    </mat-form-field>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-4">
