--- a/Front---End/src/app/user-profile/user-profile.component.html
+++ b/Front---End/src/app/user-profile/user-profile.component.html
@@ -1,3 +1,4 @@
+
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
@@ -26,6 +27,11 @@
                                 <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
                                         <input name="email" matInput placeholder="Email address" type="email" [(ngModel)]="user.email">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <mat-form-field class="example-full-width">
+                                        <input name="guildId" matInput placeholder="GuildId" type="email" [(ngModel)]="user.guildId">
                                     </mat-form-field>
                                 </div>
                             </div>
