ok except StolenVehicles

--- a/Front---End/src/app/dashboard/dashboard.component.html
+++ b/Front---End/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
@@ -8,7 +9,7 @@
                           <i class="material-icons">content_copy</i>
                       </div>
                       <p class="card-category">Daily Distance</p>
-                      <h3 class="card-title">14
+                      <h3 class="card-title">{{dashboard.dailyXp}}
                           <small>XP</small>
                       </h3>
                   </div>
@@ -27,7 +28,7 @@
                           <i class="material-icons">store</i>
                       </div>
                       <p class="card-category">Weekly Distance</p>
-                      <h3 class="card-title">100 
+                      <h3 class="card-title">{{dashboard.weeklyXp}} 
                         <small>XP</small>
                       </h3>
                   </div>
@@ -45,7 +46,7 @@
                           <i class="material-icons">info_outline</i>
                       </div>
                       <p class="card-category">Monthly Distance</p>
-                      <h3 class="card-title">310 
+                      <h3 class="card-title">{{dashboard.monthlyXp}}  
                         <small>XP</small>
                       </h3>
                   </div>
@@ -63,7 +64,7 @@
                         <i class="material-icons">store</i>
                       </div>
                       <p class="card-category">Yearly Distance</p>
-                      <h3 class="card-title">1000 
+                      <h3 class="card-title">{{dashboard.yearlyXp}}  
                         <small>XP</small>
                       </h3>
                   </div>
