--- a/Front---End/src/app/maps/maps.component.html
+++ b/Front---End/src/app/maps/maps.component.html
@@ -1,7 +1,17 @@
 <div class="main-content">
     <div class="container-fluid">
-        <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="initializeMap()">Initialise</button>
-        <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="moveMap()">Move</button>
+        <div class="row">
+            <div class="col-md-4">
+                <mat-form-field class="example-full-width">
+                    <input matInput placeholder="Insert your distance" [(ngModel)]="distance">
+                </mat-form-field>
+            </div>
+            <div class="col-md-4">
+              <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="finishWorkout()">Finish Workout</button>
+            </div>
+         </div>
+        <!-- <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="initializeMap()">Initialise</button>
+        <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="moveMap()">Move</button> -->
         <div id="map"></div>
         <div id="distance" class="distance-container">{{distance}}</div>
 
