--- a/Front---End/src/app/guild/guild.component.html
+++ b/Front---End/src/app/guild/guild.component.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-    <div class="container-fluid">
+    <div class="container-fluid" *ngIf="!noGuild">
         <div class="row">
         <div class="col-md-4">
             <div class="card card-profile">
