--- a/Front---End/src/app/maps/maps.component.html
+++ b/Front---End/src/app/maps/maps.component.html
@@ -1,11 +1,11 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <mat-form-field class="example-full-width">
                     <input matInput placeholder="Insert your distance" [(ngModel)]="distance">
                 </mat-form-field>
-            </div>
+            </div> -->
             <div class="col-md-4">
               <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="finishWorkout()">Finish Workout</button>
             </div>
