--- a/Front---End/src/app/guild/guild.component.html
+++ b/Front---End/src/app/guild/guild.component.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-    <div class="container-fluid" *ngIf="!noGuild">
+    <div class="container-fluid" *ngIf="inGuild">
         <div class="row">
         <div class="col-md-4">
             <div class="card card-profile">
@@ -22,92 +22,24 @@
         <table class="table">
             <tbody>
                 <tr>
-                    <td>
-                        <!-- <div class="form-check">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" value="" checked>
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div> -->
-                    </td>
-
-
                     <td style="color:red;"><b>{{guild.name}} guild rules:</b></td>
                     <br>
-                    <!-- <td class="td-actions text-right">
-                        <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">edit</i>
-                        </button>
-                        <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">close</i>
-                        </button>
-                    </td> -->
                 </tr>
                 <tr>
                     <td>
-                        <!-- <div class="form-check">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" value="">
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div> -->
                     </td>
                     <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
-                    <!-- <td class="td-actions text-right">
-                        <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">edit</i>
-                        </button>
-                        <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">close</i>
-                        </button>
-                    </td> -->
                 </tr>
                 <tr>
                     <td>
-                        <!-- <div class="form-check">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" value="">
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div> -->
                     </td>
                     <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept through metro Detroit
                     </td>
-                    <!-- <td class="td-actions text-right">
-                        <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">edit</i>
-                        </button>
-                        <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">close</i>
-                        </button>
-                    </td> -->
                 </tr>
                 <tr>
                     <td>
-                        <!-- <div class="form-check">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox" value="" checked>
-                                <span class="form-check-sign">
-                                    <span class="check"></span>
-                                </span>
-                            </label>
-                        </div> -->
                     </td>
                     <td>Create 4 Invisible User Experiences you Never Knew About</td>
-                    <!-- <td class="td-actions text-right">
-                        <button mat-raised-button type="button" matTooltip="Edit Task" [matTooltipPosition]="'above'" class="btn btn-primary btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">edit</i>
-                        </button>
-                        <button mat-raised-button type="button" matTooltip="Remove" [matTooltipPosition]="'above'" class="btn btn-danger btn-link btn-sm btn-just-icon">
-                            <i class="material-icons">close</i>
-                        </button>
-                    </td> -->
                 </tr>
             </tbody>
         </table>
@@ -160,6 +92,58 @@
                             </tbody>
                         </table>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" *ngIf="!inGuild">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="card card-profile">
+                    <div class="card-body">
+                        <h4 class="card-category text-gray">Not enrolled in any Guild</h4>
+                        <h2 class="card-title">wow</h2>
+                        <h4 class="card-title">Do you want to change the world?</h4>
+                        <button mat-raised-button class="btn btn-danger btn-block btn-lg" (click)="displayGuildCreate()">Create Guild</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row" *ngIf="createGuildBool">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header card-header-danger">
+                    <h4 class="card-title">Add New Guild</h4>
+                    <p class="card-category">Let's do it</p>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <label for="name">SerialNumber</label><br>
+                                <mat-form-field class="example-full-width">
+                                    <input name="name" matInput placeholder="serialNumber" type="text" [(ngModel)]="newGuild.name">
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="city">Photo</label><br>
+                                <mat-form-field class="example-full-width">
+                                    <input name="city" matInput placeholder="photoLink" type="text" [(ngModel)]="newGuild.city">
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-4">
+                                <label for="country">Photo</label><br>
+                                <mat-form-field class="example-full-width">
+                                    <input name="country" matInput placeholder="photoLink" type="text" [(ngModel)]="newGuild.country">
+                                </mat-form-field>
+                            </div>
+                        </div>                  
+                        <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="cancelAddingGuild()">Cancel</button>
+                        <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="addGuild()">Register Guild</button>       
+                        <div class="clearfix"></div>
+                    </form>
                 </div>
             </div>
         </div>
